--- a/app/views/class_rooms/_new.html.erb
+++ b/app/views/class_rooms/_new.html.erb
@@ -2,9 +2,9 @@
 
   <h2>Create a Classroom</h2>
 
-  <%= form_for :class_room, url: {action: "create"} do |f| %>
+    <%= form_for :class_room, url: {action: "create"} do |f| %>
 
-  <%# Need to adapt this code: new_user_class_room_path(@user.id) %>
+    <%# Need to adapt this code: new_user_class_room_path(@user.id) %>
 
     <div class="close_create"><span id="close_x">X</span></div>
 
@@ -22,9 +22,11 @@
       </p>
     </div>
 
+    <%= hidden_field(:user, :id) %> 
+
     <div class="form_item">
       <p>
-        <%= f.submit %>
+        <%= f.submit 'Enter' %>
       </p>
     </div>
 
