--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -47,7 +47,18 @@ p {
 }
 
 #user_name {
-
   font-size: 2em;
   font-weight: bold;
+}
+
+#user_role {
+  font-size: 1.5em;
+  font-weight: normal;
+}
+
+.profile_tools {
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 0;
+  font-size: 0.8em;
 }
