--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,18 +13,11 @@
     <div class="user-nav">
 
       <div id="user_name">
-        <p>
-          <%= @user.first_name %> <%= @user.last_name %>
-        </p>
+        <p><%= @user.first_name.titleize %> <%= @user.last_name.titleize %></p>
       </div>
-      <p><%= @user.role.titleize %></p>
-      <p><%= mail_to @user.email, "#{ @user.email }" %></p>
-
-      <div class="edit_profile">
-        <p><%= link_to 'Edit Profile', '#' %></p>
+      <div id="user_role">
+        <p><%= @user.role.titleize %></p>
       </div>
-
-      <p><%= link_to 'Delete Account', user_path, method: :delete %></p>
 
       <% if @user.role == 'student' %>
         <p>
@@ -47,6 +40,16 @@
           </button>
         </p>
       <% end %>
+
+      <div class="profile_tools">
+        <p><%= mail_to @user.email, "#{ @user.email }" %></p>
+        <p>
+          <span class="edit_profile">
+           <%= link_to 'edit your profile', '#' %>
+         </span> |
+         <%= link_to 'delete your account', user_path, method: :delete %>
+        </p>
+      </div>
 
     </div>
 
