User profile image max height

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -188,7 +188,7 @@
    width: 30px;
    height: 30px;
    font: 20px sans-serif;
-   background-color: gray;
+   background-color: pink;
    border: 1px solid black;
    box-shadow: 1px 1px black;
    color: white;
