--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+html {
+  background-color: lightgray;
+}
+
 #user-profile {
   width: 100%;
   margin-left: 10%;
@@ -22,7 +26,6 @@
 
 .profile_page_photo {
   width: 100%;
-  height: 100%;
 }
 
 h3 {
@@ -30,7 +33,9 @@ h3 {
 }
 
 img {
-  width: 100%;
+  float: right;
+  max-height: 680px;
+  max-width: 100%;
 }
 
 p {
