Widen columns on user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div id="user-profile">
 
-    <div class="user-info">
+    <div class="user-image">
       <div class="profile_page_photo">
         <% if @user.user_image.present? %>
           <%= image_tag(@user.user_image.url) %>
