--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,19 +8,20 @@ html {
 
 #user-profile {
   width: 100%;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-.user-info {
+.user-image {
   float: left;
-  width: 40%;
+  width: 45%;
+  padding-right: 10px;
 }
 
 .user-nav {
   float: left;
-  width: 40%;
-  padding-left: 20px;
+  width: 45%;
+  padding-left: 10px;
   margin-top: 0;
 }
 
