--- a/app/views/class_rooms/_new.html.erb
+++ b/app/views/class_rooms/_new.html.erb
@@ -2,7 +2,7 @@
 
   <h2>Create a Classroom</h2>
 
-    <%= form_for :class_room, url: {action: "create"} do |f| %>
+    <%= form_for [@user, @class_room] do |f| %>
 
     <div class="close_create"><span id="close_x">X</span></div>
 
@@ -19,8 +19,6 @@
         <%= f.number_field :group_code %>
       </p>
     </div>
-
-    <%= hidden_field(:user, :id) %>
 
     <div class="form_item">
       <p>
