--- a/app/views/class_rooms/index.html.erb
+++ b/app/views/class_rooms/index.html.erb
@@ -1,15 +1,45 @@
-<h1>Check Out Your Class Rooms</h1>
+<div class="your_classrooms">
 
-<% if @user.role == 'instructor' %>
-  <% @class_rooms.each do |c| %>
-  Class: <%= c.subject %><br>Group Code: <%= c.group_code %><br>
-  <%= link_to 'Create Session', new_user_class_room_class_session_path(params[:user_id], c.id) %>
-  <%= link_to 'See All Sessions', user_class_room_class_sessions_path(params[:user_id], c.id) %>
-  <br>
-  <small><%= c.created_at.strftime("%A %B %d %Y") %></small><hr>
+  <h2>Your Classrooms</h2>
+
+  <% if @user.role == 'instructor' %>
+
+    <% @class_rooms.each do |c| %>
+
+    <div id="classroom_name">
+      Class: <%= c.subject %>
+    </div>
+
+    <div id="group_code">
+      Group Code: <%= c.group_code %>
+    </div>
+
+    <div id="create_class_session">
+      <%= link_to 'Create Session', new_user_class_room_class_session_path(params[:user_id], c.id) %>
+    </div>
+
+    <div id="see_all_sessions">
+      <%= link_to 'See All Sessions', user_class_room_class_sessions_path(params[:user_id], c.id) %>
+    </div>
+
+    <div id="created_at">
+      <small><%= c.created_at.strftime("%A %B %d %Y") %></small>
+    </div>
+
+    <hr>
+
+    <% end %>
+
+  <% else %>
+
+    <% @classrooms.each do |a| %>
+
+    <div id="student_classroom">
+      <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %>
+    </div>
+
+    <% end %>
+
   <% end %>
-<% else %>
-  <% @classrooms.each do |a| %>
-  <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %><br />
-  <% end %>
-<% end %>
+
+</div>
