--- a/app/views/class_rooms/index.html.erb
+++ b/app/views/class_rooms/index.html.erb
@@ -8,38 +8,34 @@
 
     <% @class_rooms.each do |c| %>
 
-    <div id="classroom_name">
-      <%= c.subject %>
-    </div>
+      <div id="classroom_name">
+        <%= c.subject %>
+      </div>
 
-    <div id="group_code">
-      Group Code: <%= c.group_code %>
-    </div>
+      <div id="group_code">
+        Group code: <%= c.group_code %>
+      </div>
 
-    <div id="create_class_session">
-      <%= link_to 'Create Session', new_user_class_room_class_session_path(params[:user_id], c.id) %>
-    </div>
+      <div id="create_session">
+        <%= link_to 'Start New Session', new_user_class_room_class_session_path(params[:user_id], c.id) %>
+      </div>
+      <div id="view_sessions">
+        <%= link_to 'View Past Sessions', user_class_room_class_sessions_path(params[:user_id], c.id) %>
+      </div>
 
-    <div id="see_all_sessions">
-      <%= link_to 'See All Sessions', user_class_room_class_sessions_path(params[:user_id], c.id) %>
-    </div>
+      <div id="created_at">
+        Created <%= c.created_at.strftime("%A %B %d %Y") %>
+      </div>
 
-    <div id="created_at">
-      Created <%= c.created_at.strftime("%A %B %d %Y") %>
-    </div>
-
-    <hr>
+      <hr>
 
     <% end %>
 
   <% else %>
-
     <% @classrooms.each do |a| %>
-
-    <div id="student_classroom">
-      <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %>
-    </div>
-
+      <div id="student_classroom">
+        <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %>
+      </div>
     <% end %>
 
   <% end %>
