--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
   <video autoplay loop id="video-background" muted plays-inline>
     <%# <source src="https://player.vimeo.com/external/158148793.hd.mp4?s=8e8741dbee251d5c35a759718d4b0976fbf38b6f&profile_id=119&oauth2_token_id=57447761" type="video/mp4"> %>
-    <source src="<%= image_path "bueller.mp4" %>" type="video/mp4">
+    <source src="<%= image_path "lights.mp4" %>" type="video/mp4">
   </video>
 
   <div class="welcome_to_onevoice"><h1>Welcome to OneVoice</h1></div>
