--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
 <body class="welcome_page">
 
   <video autoplay loop id="video-background" muted plays-inline>
-    <%# <source src="https://player.vimeo.com/external/158148793.hd.mp4?s=8e8741dbee251d5c35a759718d4b0976fbf38b6f&profile_id=119&oauth2_token_id=57447761" type="video/mp4"> %>
     <source src="<%= image_path "lights.mp4" %>" type="video/mp4">
   </video>
 
@@ -9,12 +8,12 @@
 
   <% if current_user %>
     <h2 class="you_are_logged_in">You are logged in.</h2>
-    <button><%= link_to 'Your Profile', user_path(current_user.id) %></button>
+    <button class="your_dashboard"><%= link_to 'Your Dashboard', user_path(current_user.id) %></button>
+
   <% else %>
     <p>
-
+      
       <button class="signin">Sign In</button>
-
       <button class="signup">New User</button>
 
       <div class="modal" id="sign_in">
