--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -53,18 +53,27 @@ p {
 }
 
 #user_name {
-  font-size: 2em;
+  font-size: 3.5em;
   font-weight: bold;
+  margin-bottom: 5px;
+}
+
+#user_email {
+  font-size: 1.5em;
+  font-weight: normal;
+  margin-bottom: 8px;
 }
 
 #user_role {
   font-size: 1.5em;
   font-weight: normal;
+  margin-bottom: 5px;
 }
 
 .profile_tools {
   position: fixed;
   bottom: 0;
   margin-bottom: 0;
-  font-size: 0.8em;
+  padding-bottom: 20px;
+  font-size: 1.5em;
 }
