--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@
  }
 
  body {
-     background-color: gray;
+     background-color: pink;
      font-size: 1em;
      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
      display: inline;
