Nav parentheses replaced with 'ball' hyphen

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 
         <div class="nav_to_profile">
           <%= link_to "#{current_user.first_name} #{current_user.last_name}", user_path(current_user.id) %>
-          <span class="nav_user_role"><%= link_to " (#{current_user.role})", user_path(current_user.id) %></span>
+          <span class="nav_user_role"><%= link_to " • #{current_user.role}", user_path(current_user.id) %></span>
         </div>
 
         <div class="nav_to_logout">
