Divs and '#' links on 'Show All Classrooms' buttons

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,24 +25,35 @@
       </div>
 
       <% if @user.role == 'student' %>
-        <p>
-          <button class="access">
-            <%= link_to 'Show All Classrooms', user_class_rooms_path(@user.id) %>
-          </button>
-        </p>
+
+          <div class="show_all_classrooms">
+            <p>
+              <button class="access">
+                <%= link_to 'Show All Classrooms', '#' %>
+                <%#= link_to 'Show All Classrooms', user_class_rooms_path(@user.id) %>
+              </button>
+            </p>
+          </div>
+
       <% elsif @user.role == 'instructor' %>
-        <div class="create_classroom">
-          <p>
-            <button class="access">
-              <%= link_to 'Create a Classroom', '#' %>
-            </button>
-          </p>
-        </div>
-        <p>
-          <button class="access">
-            <%= link_to 'See All Classrooms', user_class_rooms_path(@user.id) %>
-          </button>
-        </p>
+
+          <div class="create_classroom">
+            <p>
+              <button class="access">
+                <%= link_to 'Create a Classroom', '#' %>
+              </button>
+            </p>
+          </div>
+
+          <div class="show_all_classrooms">
+            <p>
+              <button class="access">
+                <%= link_to 'Show All Classrooms', '#' %>
+                <%#= link_to 'Show All Classrooms', user_class_rooms_path(@user.id) %>
+              </button>
+            </p>
+          </div>
+
       <% end %>
 
       <div class="profile_tools">
