Divs calling partial view for modal added to User page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -73,4 +73,12 @@
       <%= render "class_rooms/new" %>
     </div>
 
+    <div class="modal" id="#show_instructor_classrooms">
+      <%= render "class_rooms/index" %>
+    </div>
+
+    <div class="modal" id="#show_student_classrooms">
+      <%= render "class_rooms/index" %>
+    </div>
+
 </div>
