--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -73,11 +73,11 @@
       <%= render "class_rooms/new" %>
     </div>
 
-    <div class="modal" id="#show_instructor_classrooms">
+    <div class="modal" id="show_instructor_classrooms">
       <%= render "class_rooms/index" %>
     </div>
 
-    <div class="modal" id="#show_student_classrooms">
+    <div class="modal" id="show_student_classrooms">
       <%= render "class_rooms/index" %>
     </div>
 
