--- a/app/views/class_rooms/_index.html.erb
+++ b/app/views/class_rooms/_index.html.erb
@@ -6,6 +6,8 @@
 
   <% if @user.role == 'instructor' %>
 
+    <div class="close_instructor_classrooms"><span id="close_x">X</span></div>
+
     <% @class_rooms.reverse.each do |c| %>
 
       <div id="classroom_name">
@@ -32,6 +34,7 @@
     <% end %>
 
   <% else %>
+    <div class="close_student_classrooms"><span id="close_x">X</span></div>
     <% @classrooms.reverse.each do |a| %>
       <div id="student_classroom">
         <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %>
