Fixed variable typo that was causing student modal to crash the app

--- a/app/views/class_rooms/_index.html.erb
+++ b/app/views/class_rooms/_index.html.erb
@@ -35,7 +35,7 @@
 
   <% else %>
     <div class="close_student_classrooms"><span id="close_x">X</span></div>
-    <% @classrooms.reverse.each do |a| %>
+    <% @class_rooms.reverse.each do |a| %>
       <div id="student_classroom">
         <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %>
       </div>
