Removed '.titleize' from Username display, which was causing hyphens etc. not to appear

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
     <div class="user-nav">
 
       <div id="user_name">
-        <%= @user.first_name.titleize %> <%= @user.last_name.titleize %>
+        <%= @user.first_name %> <%= @user.last_name %>
       </div>
 
       <div id="user_email">
