Google Web Fonts (Merriweather & Lato) added

--- a/app/assets/stylesheets/class_rooms.scss
+++ b/app/assets/stylesheets/class_rooms.scss
@@ -13,6 +13,7 @@ html {
 #your_classrooms_header {
   font-size: 2em;
   font-weight: bold;
+  font-family: 'Merriweather', serif;
 }
 
 #classroom_name {
