--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@
  body {
      background-color: lightgray;
      font-size: 1em;
-     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+     font-family: 'Lato', sans-serif;
      display: inline;
  }
 
@@ -90,6 +90,7 @@
    color: white;
    text-shadow: 2px 2px black;
    margin-bottom: 2em;
+   font-family: 'Lato', sans-serif;
  }
 
  #video-background {
@@ -107,7 +108,7 @@
    color: white;
    text-align: center;
    font-size: 3em;
-   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-family: 'Merriweather', serif;
    text-shadow: 2px 2px black;
  }
 
@@ -115,7 +116,7 @@
    color: black;
    text-align: center;
    font-size: 1.5em;
-   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-family: 'Merriweather', serif;
  }
 
 /* ----------------------------------------------------------------- */
@@ -137,6 +138,7 @@
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.56), 0 17px 50px 0 rgba(0,0,0,0.42);
    left: 50%;
    transform: translate(-50%, -50%);
+   font-family: 'Lato', sans-serif;
  }
 
  .modal#edit_profile {
@@ -158,7 +160,7 @@
    transform: translate(-50%);
  }
 
- .modal#show_instructor_classrooms , .modal#show_student_classrooms {
+ .modal#show_classrooms {
    transform: translate(-50%, -8%);
    max-height: 80vh;
  }
@@ -201,6 +203,7 @@
 
   #close_x {
    color: black;
+   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: normal;
    font-size: 1em;
    margin: 0 auto;
@@ -222,7 +225,7 @@
    line-height: 2;
    text-align: center;
    font-size: 1.2em;
-   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-family: 'Lato', sans-serif;
    background-color: skyblue;
    color: black;
    position: relative;
@@ -262,6 +265,7 @@
    position: fixed;
    top: 0;
    font-size: 1.4em;
+   font-family: 'Lato', sans-serif;
  }
 
  .nav_main a {
