--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
     <title>OneVoice</title>
     <meta name="description" content="Realtime live classroom feedback for instructors">
     <%= csrf_meta_tags %>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Lato|Merriweather');
+    </style>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
