--- a/app/views/class_rooms/_index.html.erb
+++ b/app/views/class_rooms/_index.html.erb
@@ -6,41 +6,45 @@
 
   <div class="close_classrooms"><span id="close_x">X</span></div>
 
-  <% if @user.role == 'instructor' %>
+  <div class="scrollable_list">
 
-    <% @class_rooms.reverse.each do |c| %>
+    <% if @user.role == 'instructor' %>
 
-      <div id="classroom_name">
-        <%= c.subject %>
-      </div>
+      <% @class_rooms.reverse.each do |c| %>
 
-      <div id="group_code">
-        Group code: <%= c.group_code %>
-      </div>
+        <div id="classroom_name">
+          <%= c.subject %>
+        </div>
 
-      <div id="create_session">
-        <%= link_to 'Start New Session', new_user_class_room_class_session_path(session[:user_id], c.id) %>
-      </div>
-      <div id="view_sessions">
-        <%= link_to 'View All Sessions', user_class_room_class_sessions_path(session[:user_id], c.id) %>
-      </div>
+        <div id="group_code">
+          Group code: <%= c.group_code %>
+        </div>
 
-      <div id="created_at">
-        Created <%= c.created_at.strftime("%A %B %d %Y") %>
-      </div>
+        <div id="create_session">
+          <%= link_to 'Start New Session', new_user_class_room_class_session_path(session[:user_id], c.id) %>
+        </div>
+        <div id="view_sessions">
+          <%= link_to 'View All Sessions', user_class_room_class_sessions_path(session[:user_id], c.id) %>
+        </div>
 
-      <hr>
+        <div id="created_at">
+          Created <%= c.created_at.strftime("%A %B %d %Y") %>
+        </div>
 
-    <% end %>
+        <hr>
 
-  <% else %>
+      <% end %>
 
-    <% @class_rooms.reverse.each do |a| %>
-      <div id="student_classroom">
-        <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %>
-      </div>
+    <% else %>
 
-    <% end %>
+      <% @class_rooms.reverse.each do |a| %>
+        <div id="student_classroom">
+          <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %>
+        </div>
+
+      <% end %>
+
+    </div>
 
   <% end %>
 
