'View All Classrooms' now shows number of user's classrooms

--- a/app/views/class_rooms/_index.html.erb
+++ b/app/views/class_rooms/_index.html.erb
@@ -1,7 +1,7 @@
 <div class="your_classrooms">
 
   <div id="your_classrooms_header">
-    <p>Your Classrooms</p>
+    <p>You have <%= @class_rooms.count %> Classrooms:</p>
   </div>
 
   <div class="close_classrooms"><span id="close_x">X</span></div>
