Classroom names (in list-modal) now link to session lists

--- a/app/assets/stylesheets/class_rooms.scss
+++ b/app/assets/stylesheets/class_rooms.scss
@@ -21,6 +21,10 @@ html {
   font-weight: bold;
 }
 
+#classroom_name a {
+  color: black;
+}
+
 #group_code, #view_sessions {
   font-size: 1.1em;
 }
