Made top bar of live class session fit by removing 'spacer' from CSS. Will need to adjust the other views now

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,9 +29,10 @@
      display: inline;
  }
 
- .spacer {
-   padding-top: 60px;
- }
+ /*.spacer {
+   margin-top: 0;
+   height: 60px;
+ }*/
 
  a {
    color: mediumblue;
