CSS fixes re: top 'spacer' div

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,6 +10,7 @@ html {
   width: 100%;
   margin-left: 5%;
   margin-right: 5%;
+  margin-top: 47px;
 }
 
 .user-image {
@@ -22,7 +23,7 @@ html {
   float: left;
   width: 45%;
   padding-left: 10px;
-  margin-top: 0;
+  margin-top: 20px;
 }
 
 .profile_page_photo {
