--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,1 +1,31 @@
-<p><%= @helpfulness1 %>Students found the Lesson not Helpful at all</p>
+<h1><strong>Today's Feedback</strong></h1>
+<center><h3><strong><%= @helpfulness1and2+@helpfulness3+@helpfulness4and5 %></strong> Students Submitted Today's Survey</h3></center>
+
+<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
+
+<br>
+
+
+
+<div style="width: 300px; height: 300px; background-color:white" >
+    <h3>How HELPFUL was this Lesson</h3>
+    <%= pie_chart({"Not Helpful" => @helpfulness1and2, "Just OK" => @helpfulness3, "Very Helpful" => @helpfulness4and5}, height: "300px", width: "300px")%>
+</div>
+
+<div style="width: 300px; height: 300px; background-color:white">
+    <h3>How CLEAR was this Lesson</h3>
+    <%= pie_chart({"Not Clear" => @clarity1and2, "Kind of Clear" => @clarity3, "Very Clear" => @clarity4and5}) %>
+</div>
+
+<div style="width: 300px; height: 300px; background-color:white">
+    <h3>How was the PACE this Lesson</h3>
+    <%= pie_chart({"Way Too Fast" => @pace1and2, "Could Be Better" => @pace3, "Perfect" => @pace4and5}) %>
+</div>
+<br><br>
+
+<p><strong>Student's Suggestions</strong><p>
+  <div id="daily suggestions"
+    <% @suggestions.each do |s| %>
+      <p><%= s.suggestions %></p><hr>
+    <% end %>
+  </div>
