--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -7,25 +7,25 @@
 
 
 
-<div style="width: 300px; height: 300px; background-color:white" >
+<div style="width: 350px; height: 350px; background-color:white" >
     <h3>How HELPFUL was this Lesson</h3>
     <%= pie_chart({"Not Helpful" => @helpfulness1and2, "Just OK" => @helpfulness3, "Very Helpful" => @helpfulness4and5}, height: "300px", width: "300px")%>
 </div>
 
-<div style="width: 300px; height: 300px; background-color:white">
+<div style="width: 350px; height: 350px; background-color:white; margin-top: 100px">
     <h3>How CLEAR was this Lesson</h3>
     <%= pie_chart({"Not Clear" => @clarity1and2, "Kind of Clear" => @clarity3, "Very Clear" => @clarity4and5}) %>
 </div>
 
-<div style="width: 300px; height: 300px; background-color:white">
+<div style="width: 350px; height: 350px; background-color:white; margin-top: 100px; margin-bottom: 150px">
     <h3>How was the PACE this Lesson</h3>
     <%= pie_chart({"Way Too Fast" => @pace1and2, "Could Be Better" => @pace3, "Perfect" => @pace4and5}) %>
 </div>
 <br><br>
 
-<p><strong>Student's Suggestions</strong><p>
-  <div id="daily suggestions"
+<p>Student's Suggestions<p>
+  <div id="daily suggestions">
     <% @suggestions.each do |s| %>
-      <p><%= s.suggestions %></p><hr>
+      <p><small><%= s.suggestions %></small></p><hr>
     <% end %>
   </div>
