--- a/app/views/class_rooms/index.html.erb
+++ b/app/views/class_rooms/index.html.erb
@@ -32,7 +32,7 @@
     <% end %>
 
   <% else %>
-    <% @classrooms.reverse.each do |a| %>
+    <% @class_rooms.reverse.each do |a| %>
       <div id="student_classroom">
         <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %>
       </div>
