5px margin for userpage buttons, in case of wide monitor

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -265,6 +265,10 @@
    box-shadow: 2px 2px black;
 }
 
+button.access {
+  margin-right: 5px;
+}
+
  .your_dashboard {
    width: auto;
    padding-left: 20px;
