--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <body class="welcome_page">
 
   <video autoplay loop id="video-background" muted plays-inline>
-    <source src="<%= image_path "lights.mp4" %>" type="video/mp4">
+    <source src="<%= image_path "blackboard2.mov" %>" type="video/mp4">
   </video>
 
   <div class="welcome_to_onevoice"><h1>Welcome to OneVoice</h1></div>
