--- a/app/views/class_rooms/_index.html.erb
+++ b/app/views/class_rooms/_index.html.erb
@@ -32,7 +32,7 @@
 
     <% else %>
 
-      <% @class_rooms.reverse.each do |a| %>
+      <% @classrooms.reverse.each do |a| %>
         <div id="student_classroom">
           <%= link_to a.subject, user_class_room_class_sessions_path(@user.id, a.id) %>
         </div>
