--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,9 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-html {
-  background-color: lightgray;
-}
+// html {
+//   background-color: white;
+// }
 
 #user-profile {
   width: 100%;
