--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@
  }
 
  body {
-     background-color: lightgray;
+     background-color: #BFD7EA;
      font-size: 1em;
      font-family: 'Lato', sans-serif;
      display: inline;
