--- a/app/assets/stylesheets/class_rooms.scss
+++ b/app/assets/stylesheets/class_rooms.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 html {
-  background-color: lightgray;
+  background-color: #DADDD8;
 }
 
 .your_classrooms {
