--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
         <% if @user.user_image.present? %>
           <%= image_tag(@user.user_image.url) %>
         <% else %>
-          <%= image_tag ActionController::Base.helpers.asset_path("adam_west.jpg") %>
+          <%= image_tag ActionController::Base.helpers.asset_path("YourFaceHere.jpg") %>
         <% end %>
       </div>
     </div>
