--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -327,3 +327,11 @@ button.access {
  .nav_user_role {
    font-weight: normal;
  }
+
+ #alert {
+   position: absolute;
+   top: 0;
+   margin: 0 auto;
+   width: 100%;
+   height: 10vh;
+ }
